# megaglest-data

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md  glest.rc  tx-cleanup.sh
glest_game/: CMakeLists.txt  configuration.xml  glest.ini  servers.ini
glest_game/data/: defaultGameSetup.mgg  defaultNetworkGameSetup.mgg
glest_game/data/lang/: afrikaans.lng  albanian.lng  arabic.lng  catalan.lng  chinese.lng  czech.lng  danish.lng  dansk.lng  deutsch.lng  dutch.lng  english.lng  español.lng  francais.lng  french.lng  gaelic.lng  galego.lng  galician.lng  german.lng  greek.lng  hebrew.lng  italian.lng  italiano.lng  japanese.lng  nederlands.lng  persian.lng  polish.lng  polski.lng  portugues.lng  portuguese.lng  russian.lng  slovenian.lng  spanish.lng  ukrainian.lng  ukrainska.lng  vietnamese.lng
glest_game/docs/: AUTHORS  AUTHORS.data.txt  CHANGELOG  CHANGELOG.txt  COPYRIGHT.data.txt  LICENSE  README  README.data-license.txt  ReleaseNotes.txt  data_license_readme.txt  license.txt  readme.txt
glest_game/docs/glest_factions/: advanced_architecture.html  advanced_magic.html  aerodrome.html  airship.html  archer.html  archmage.html  archmage_tower.html  barracks.html  blacksmith.html  catapult.html  daemon.html  defense_tower.html  dragon.html  drake_rider.html  energy_compression.html  energy_source.html  farm.html  ghost_armor.html  golem.html  index.html  mana_compression.html  ornithopter.html  pig.html  rider.html  robotics.html  stables.html  summoner_guild.html  swordman.html  training_field.html
glest_game/docs/tech/: advanced_architecture.html  advanced_magic.html  aerodrome.html  air_ballista.html  airship.html  ancient_summoning.html  archer.html  archmage.html  archmage_tower.html  barracks.html  battle_machine.html  battlemage.html  behemoth.html  blacksmith.html  blade_weapons.html  castle.html  catapult.html  cow.html  daemon.html  defense_tower.html  dragon.html  dragon_call.html  drake_rider.html  energy_compression.html  energy_sharpening.html  energy_source.html  farm.html  ghost_armor.html  golem.html  guard.html  hell_gate.html  horseman.html  initiate.html  library.html  mage_tower.html  magitech.html  mana_compression.html  ornithopter.html  piercing_weapons.html  pig.html  (+15 more)
glest_game/maps/: 2rivers.mgm  4hills8kings.mgm  4kingdoms8kings.mgm  5vs2.mgm  6isle.mgm  ally_resist.mgm  ally_resist_clone.mgm  another_riverside.mgm  canoe.mgm  cauldron.mgm  clinch.gbm  conflict6xtreed.mgm  domination_isles.gbm  eight_gradient.mgm  eight_rivers.mgm  end_times.gbm  fight_4_your_golden_right.mgm  forest_divide.mgm  four_free.gbm  grandezza.mgm  hells_clam.mgm  highlands.mgm  intermezzo.mgm  lakesway.gbm  land_of_plenty2.mgm  lau_lagoon.gbm  megakill3vs1.gbm  one_king_fairplay.gbm  one_king_rules_them_all.gbm  paraiso_br.mgm  pentagon.mgm  redoubt.gbm  river_raid2.mgm  six_swamp_of_sorrow.gbm  team_island4.mgm  tropical2v2.gbm  tropical4v4.mgm  tt_goldrush_v2.gbm  twisty_canyon.gbm  wadi_nefud2.gbm  (+1 more)
glest_game/scenarios/amazones/: amazones.xml  amazones_albanian.lng  amazones_arabic.lng  amazones_czech.lng  amazones_dutch.lng  amazones_french.lng  amazones_gaelic.lng  amazones_galician.lng  amazones_german.lng  amazones_greek.lng  amazones_hebrew.lng  amazones_italian.lng  amazones_italiano.lng  amazones_polish.lng  amazones_polski.lng  amazones_portuguese.lng  amazones_russian.lng  amazones_spanish.lng
glest_game/scenarios/amazones_light/: amazones_light.xml  amazones_light_czech.lng  amazones_light_dutch.lng  amazones_light_english.lng  amazones_light_french.lng  amazones_light_gaelic.lng  amazones_light_galician.lng  amazones_light_german.lng  amazones_light_greek.lng  amazones_light_hebrrew.lng  amazones_light_italian.lng  amazones_light_italiano.lng  amazones_light_polish.lng  amazones_light_polski.lng  amazones_light_portuguese.lng  amazones_light_russian.lng  amazones_light_spanish.lng
glest_game/scenarios/anarchy/: anarchy.xml
glest_game/scenarios/beehive_castle/: beehive_castle.xml
glest_game/scenarios/beginner_1/: beginner_1.xml
glest_game/scenarios/beginner_2/: beginner_2.xml
glest_game/scenarios/beginner_3/: beginner_3.xml
glest_game/scenarios/capture_enemy_flag/: capture_enemy_flag.xml  capture_enemy_flag_arabic.lng  capture_enemy_flag_czech.lng  capture_enemy_flag_dutch.lng  capture_enemy_flag_english.lng  capture_enemy_flag_french.lng  capture_enemy_flag_gaelic.lng  capture_enemy_flag_german.lng  capture_enemy_flag_greek.lng  capture_enemy_flag_hebrew.lng  capture_enemy_flag_italian.lng  capture_enemy_flag_polish.lng  capture_enemy_flag_portuguese.lng  capture_enemy_flag_russian.lng  capture_enemy_flag_spanish.lng
glest_game/scenarios/duel/: duel.xml
glest_game/scenarios/egypt_mayhem/: egypt_mayhem.xml
glest_game/scenarios/indian_attack/: indian_attack.xml
glest_game/scenarios/kill_the_magic/: kill_the_magic.xml
glest_game/scenarios/magic_can_do_it/: magic_can_do_it.xml
glest_game/scenarios/my_island/: my_island.xml
glest_game/scenarios/norsemen_attack/: norsemen_attack.xml
glest_game/scenarios/one_hope/: one_hope.xml
glest_game/scenarios/storming/: storming.xml  storming_arabic.lng  storming_czech.lng  storming_dutch.lng  storming_english.lng  storming_español.lng  storming_french.lng  storming_gaelic.lng  storming_galego.lng  storming_galician.lng  storming_german.lng  storming_greek.lng  storming_hebrew.lng  storming_italian.lng  storming_italiano.lng  storming_polish.lng  storming_polski.lng  storming_portuguese.lng  storming_russian.lng  storming_spanish.lng  storming_vietnamese.lng
glest_game/scenarios/tech_and_magic/: tech_and_magic.xml
glest_game/scenarios/tough_duel/: tough_duel.xml
glest_game/scenarios/waterworld/: waterworld.xml
glest_game/screens/: screens
glest_game/techs/magitech/: magitech.xml
glest_game/techs/megapack/: megapack.xml
glest_game/tilesets/autumn/: autumn.xml
glest_game/tilesets/birch_forest/: birch_forest.xml
glest_game/tilesets/dark_forest/: dark_forest.xml
glest_game/tilesets/desert2/: desert2.xml
glest_game/tilesets/evergreen/: evergreen.xml
(+3832 files in other folders)
